--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -5,5 +5,50 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      }
+      //,
+
+      //"HttpsInlineCertFile": {
+      //  "Url": "https://localhost:5001",
+      //  "Certificate": {
+      //    "Path": "<path to .pfx file>",
+      //    "Password": "<certificate password>"
+      //  }
+      //},
+
+      //"HttpsInlineCertStore": {
+      //  "Url": "https://localhost:5002",
+      //  "Certificate": {
+      //    "Subject": "<subject; required>",
+      //    "Store": "<certificate store; defaults to My>",
+      //    "Location": "<location; defaults to CurrentUser>",
+      //    "AllowInvalid": "<true or false; defaults to false>"
+      //  }
+      //},
+
+      //  "HttpsDefaultCert": {
+      //    "Url": "https://localhost:5003"
+      //  },
+
+      //  "Https": {
+      //    "Url": "https://*:5004",
+      //    "Certificate": {
+      //      "Path": "<path to .pfx file>",
+      //      "Password": "<certificate password>"
+      //    }
+      //  }
+    }//,
+    //"Certificates": {
+    //  "Default": {
+    //    "Path": "<path to .pfx file>",
+    //    "Password": "<certificate password>"
+    //  }
+    //}
   }
+
 }
