--- a/WCF/Web.config
+++ b/WCF/Web.config
@@ -34,6 +34,12 @@
       <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
     </service>
   </services>
+  <bindings>
+    <webHttpBinding>
+      <binding maxReceivedMessageSize="2147483647">
+      </binding>
+    </webHttpBinding>
+  </bindings>  
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
