--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -9,9 +9,9 @@
 
   "Kestrel": {
     "EndPoints": {
-      //"Http": {
-      //  "Url": "http://localhost:5000"
-      //}
+      "Http": {
+        "Url": "http://localhost:5000"
+      }
       //,
 
       //"HttpsInlineCertFile": {
@@ -43,16 +43,13 @@
       //      "Password": "<certificate password>"
       //    }
       //  }
-    } //,
-    //"Certificates": {
-    //  "Default": {
-    //    "Path": "<path to .pfx file>",
-    //    "Password": "<certificate password>"
-    //  }
-    //}
+      //} ,
+      //"Certificates": {
+      //  "Default": {
+      //    "Path": "<path to .pfx file>",
+      //    "Password": "<certificate password>"
+      //  }
+      //}
+    }
   }
-
-}
-
-
 }
