--- a/BenchmarkWebApiWCF/BenchmarkWebApiWCF.csproj
+++ b/BenchmarkWebApiWCF/BenchmarkWebApiWCF.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.3" />
+    <PackageReference Include="MessagePack" Version="1.7.3.4" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
